fixed pixel on mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -242,7 +242,7 @@ footer{
 }
 
 
-@media (max-width: 560px) {
+@media (max-width: 500px) {
 
   header h1{
   	font-size: 14px;
@@ -263,7 +263,7 @@ footer{
   }
 
   .Intro {
-  	margin-left: 15px;
+  	margin-left: 0px;
   }
 
   .Intro h2{
